# ESP32-platform-firmware

./: .gitignore  .gitmodules  build.sh
firmware/: CMakeLists.txt
firmware/components/buses/: CMakeLists.txt  buses.c
firmware/components/driver_display_eink/: CMakeLists.txt  driver_eink_dev.c
firmware/components/driver_display_erc12864/: CMakeLists.txt
firmware/components/driver_display_flipdotter/: CMakeLists.txt  driver_flipdotter.c
firmware/components/driver_display_fri3d/: CMakeLists.txt
firmware/components/driver_display_gxgde0213b1/: CMakeLists.txt
firmware/components/driver_display_hub75/: CMakeLists.txt  Kconfig
firmware/components/driver_display_ili9341/: CMakeLists.txt  driver_ili9341.c
firmware/components/driver_display_ledmatrix/: CMakeLists.txt
firmware/components/driver_display_nokia6100/: CMakeLists.txt
firmware/components/driver_display_ssd1306/: CMakeLists.txt
firmware/components/driver_display_st7735/: CMakeLists.txt
firmware/components/driver_display_st7789v/: CMakeLists.txt
firmware/components/driver_fpga_ice40/: CMakeLists.txt
firmware/components/driver_framebuffer/: CMakeLists.txt  component.mk  driver_framebuffer_matrix_drawing.cpp  driver_framebuffer_window.cpp
firmware/components/driver_framebuffer/fonts/fontconvert/: fontconvert.c  fontconvert_adafruit.c
firmware/components/driver_framebuffer/png/: flash_reader.c
firmware/components/driver_fsoverbus/: CMakeLists.txt_
firmware/components/driver_input_mpr121/: CMakeLists.txt  driver_mpr121.c
firmware/components/driver_io_disobey_samd/: CMakeLists.txt  driver_disobey_samd.c
firmware/components/driver_io_mch2021_stm32/: CMakeLists.txt
firmware/components/driver_io_pca9555/: CMakeLists.txt  driver_pca9555.c
firmware/components/driver_led_apa102/: CMakeLists.txt
firmware/components/driver_led_neopixel/: CMakeLists.txt
firmware/components/driver_microphone/: CMakeLists.txt
firmware/components/driver_mpu6050/: CMakeLists.txt
firmware/components/driver_radio_lora/: CMakeLists.txt  driver_lora.c
firmware/components/driver_rtcmem/: CMakeLists.txt
firmware/components/driver_sdcard/: CMakeLists.txt
firmware/components/driver_sensor_am2320/: CMakeLists.txt  driver_am2320.c
firmware/components/micropython/: CMakeLists.txt
firmware/components/micropython/genhdr/: moduledefs.h  mpversion.h  pins.h  qstrdefs.collected.h  qstrdefs.preprocessed.h  root_pointers.h
firmware/components/micropython/port/: embed_util.c
firmware/components/resource_ssl_certs/: CMakeLists.txt
firmware/components/sha17/: CMakeLists.txt  sha_main.c  system.c
firmware/components/sha17/include/: sha_main.h
firmware/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
firmware/main/: CMakeLists.txt  factory_reset.c  idf_component.yml  main.c  ota_update.c  sdkconfig.sha17  system.c
firmware/main/include/: factory_reset.h  platform.h  system.h
