set(srcs
	"driver_framebuffer.cpp"
	"driver_framebuffer_drawing.cpp"
	"driver_framebuffer_matrix_drawing.cpp"
	"driver_framebuffer_text.cpp"
	"driver_framebuffer_dirty.cpp"
	"driver_framebuffer_matrix.cpp"
	"driver_framebuffer_orientation.cpp"
	"driver_framebuffer_window.cpp"
	"./png/flash_reader.c"
	"./png/png_reader.c"
	"./png/deflate_reader.c"
	"./png/crc32.c"
	"./png/mem_reader.c"
	"./png/file_reader.c"
	"./png/adler32.c"
	"./fonts/font_Exo2-ExtraLight_9pt7b.c"
	"./fonts/font_Exo2-ThinItalic_9pt7b.c"
	"./fonts/font_roboto-BlackItalic_20pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_22pt7b.c"
	"./fonts/font_Exo2-Medium_16pt7b.c"
	"./fonts/font_Exo2-Regular_20pt7b.c"
	"./fonts/font_roboto_24pt7b.c"
	"./fonts/font_Exo2-BoldItalic_22pt7b.c"
	"./fonts/font_Exo2-SemiBold_13pt7b.c"
	"./fonts/font_org_01_13pt7b.c"
	"./fonts/font_Exo2-MediumItalic_42pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_24pt7b.c"
	"./fonts/font_fairlight_16pt7b.c"
	"./fonts/font_Exo2-BlackItalic_13pt7b.c"
	"./fonts/font_roboto_6pt7b.c"
	"./fonts/font_Exo2-Thin_18pt7b.c"
	"./fonts/font_Exo2-BoldItalic_6pt7b.c"
	"./fonts/font_Exo2-ThinItalic_12pt7b.c"
	"./fonts/font_roboto-Black_24pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_42pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_9pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_6pt7b.c"
	"./fonts/font_Exo2-Bold_13pt7b.c"
	"./fonts/font_dejavusans_24pt7b.c"
	"./fonts/font_Exo2-ExtraBold_6pt7b.c"
	"./fonts/font_permanentmarker_42pt7b.c"
	"./fonts/font_Exo2-Black_18pt7b.c"
	"./fonts/font_Exo2-LightItalic_42pt7b.c"
	"./fonts/font_Exo2-Italic_42pt7b.c"
	"./fonts/font_Exo2-Regular_22pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_20pt7b.c"
	"./fonts/font_Exo2-ThinItalic_36pt7b.c"
	"./fonts/font_roboto-BlackItalic_22pt7b.c"
	"./fonts/font_Exo2-BoldItalic_20pt7b.c"
	"./fonts/font_Exo2-Light_24pt7b.c"
	"./fonts/font_ocra_13pt7b.c"
	"./fonts/font_Exo2-ExtraBold_13pt7b.c"
	"./fonts/font_Exo2-MediumItalic_8pt7b.c"
	"./fonts/font_ocra_6pt7b.c"
	"./fonts/fontconvert/handmade_fonts/font_ipane7x5.c"
	"./fonts/fontconvert/fontconvert_adafruit.c"
	"./fonts/fontconvert/fontconvert.c"
	"./fonts/font_Exo2-Thin_42pt7b.c"
	"./fonts/font_Exo2-Light_20pt7b.c"
	"./fonts/font_Exo2-BlackItalic_8pt7b.c"
	"./fonts/font_Exo2-BoldItalic_24pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_24pt7b.c"
	"./fonts/font_roboto_22pt7b.c"
	"./fonts/font_Exo2-ExtraLight_13pt7b.c"
	"./fonts/font_Exo2-MediumItalic_18pt7b.c"
	"./fonts/font_Exo2-ThinItalic_16pt7b.c"
	"./fonts/font_roboto-Black_20pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_22pt7b.c"
	"./fonts/font_dejavusans_6pt7b.c"
	"./fonts/font_Exo2-Italic_9pt7b.c"
	"./fonts/font_Exo2-Black_6pt7b.c"
	"./fonts/font_permanentmarker_8pt7b.c"
	"./fonts/font_dejavusans_20pt7b.c"
	"./fonts/font_Exo2-Bold_9pt7b.c"
	"./fonts/font_fairlight_12pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_20pt7b.c"
	"./fonts/font_Exo2-SemiBold_8pt7b.c"
	"./fonts/font_dejavusans_22pt7b.c"
	"./fonts/font_ipane7x5.c"
	"./fonts/font_Exo2-Light_9pt7b.c"
	"./fonts/font_Exo2-Medium_36pt7b.c"
	"./fonts/font_Exo2-LightItalic_18pt7b.c"
	"./fonts/font_fairlight_8pt7b.c"
	"./fonts/font_roboto-Black_22pt7b.c"
	"./fonts/font_Exo2-Italic_18pt7b.c"
	"./fonts/font_roboto-BlackItalic_6pt7b.c"
	"./fonts/font_Exo2-Light_22pt7b.c"
	"./fonts/font_Exo2-Regular_24pt7b.c"
	"./fonts/font_permanentmarker_18pt7b.c"
	"./fonts/font_roboto_20pt7b.c"
	"./fonts/font_roboto-BlackItalic_24pt7b.c"
	"./fonts/font_Exo2-Black_42pt7b.c"
	"./fonts/font_Exo2-Medium_12pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_18pt7b.c"
	"./fonts/font_fairlight_36pt7b.c"
	"./fonts/font_org_01_6pt7b.c"
	"./fonts/font_Exo2-MediumItalic_20pt7b.c"
	"./fonts/font_Exo2-Italic_22pt7b.c"
	"./fonts/font_roboto-Black_18pt7b.c"
	"./fonts/font_Exo2-LightItalic_22pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_6pt7b.c"
	"./fonts/font_Exo2-Bold_12pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_8pt7b.c"
	"./fonts/font_Exo2-ExtraLight_16pt7b.c"
	"./fonts/font_dejavusans_18pt7b.c"
	"./fonts/font_Exo2-ThinItalic_13pt7b.c"
	"./fonts/font_roboto-BlackItalic_42pt7b.c"
	"./fonts/font_Exo2-Black_24pt7b.c"
	"./fonts/font_Exo2-Regular_42pt7b.c"
	"./fonts/font_weather42pt8b.c"
	"./fonts/font_Exo2-Thin_6pt7b.c"
	"./fonts/font_roboto-Black_6pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_22pt7b.c"
	"./fonts/font_Exo2-ExtraBold_16pt7b.c"
	"./fonts/font_permanentmarker_22pt7b.c"
	"./fonts/font_ocra_16pt7b.c"
	"./fonts/font_Exo2-Light_18pt7b.c"
	"./fonts/font_Exo2-Bold_36pt7b.c"
	"./fonts/font_roboto_18pt7b.c"
	"./fonts/font_permanentmarker_20pt7b.c"
	"./fonts/font_Exo2-Regular_6pt7b.c"
	"./fonts/font_org_01_12pt7b.c"
	"./fonts/font_Exo2-SemiBold_12pt7b.c"
	"./fonts/font_Exo2-ExtraLight_8pt7b.c"
	"./fonts/font_Exo2-BlackItalic_36pt7b.c"
	"./fonts/font_Exo2-ThinItalic_8pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_20pt7b.c"
	"./fonts/font_Exo2-SemiBold_36pt7b.c"
	"./fonts/font_Exo2-BoldItalic_42pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_42pt7b.c"
	"./fonts/font_Exo2-BlackItalic_12pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_18pt7b.c"
	"./fonts/font_Exo2-LightItalic_20pt7b.c"
	"./fonts/font_Exo2-Italic_20pt7b.c"
	"./fonts/font_Exo2-MediumItalic_22pt7b.c"
	"./fonts/font_Exo2-Thin_24pt7b.c"
	"./fonts/font_org_01_36pt7b.c"
	"./fonts/font_Exo2-Black_22pt7b.c"
	"./fonts/font_fairlight_9pt7b.c"
	"./fonts/font_Exo2-BlackItalic_16pt7b.c"
	"./fonts/font_Exo2-Light_42pt7b.c"
	"./fonts/font_Exo2-Light_8pt7b.c"
	"./fonts/font_Exo2-SemiBold_9pt7b.c"
	"./fonts/font_Exo2-Thin_20pt7b.c"
	"./fonts/font_Exo2-Italic_24pt7b.c"
	"./fonts/font_fairlight_13pt7b.c"
	"./fonts/font_Exo2-LightItalic_24pt7b.c"
	"./fonts/font_dejavusans_42pt7b.c"
	"./fonts/font_org_01_16pt7b.c"
	"./fonts/font_roboto-BlackItalic_18pt7b.c"
	"./fonts/font_Exo2-Regular_18pt7b.c"
	"./fonts/font_permanentmarker_24pt7b.c"
	"./fonts/font_Exo2-LightItalic_6pt7b.c"
	"./fonts/font_roboto-Black_42pt7b.c"
	"./fonts/font_Exo2-Medium_13pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_24pt7b.c"
	"./fonts/font_Exo2-SemiBold_16pt7b.c"
	"./fonts/font_Exo2-Medium_6pt7b.c"
	"./fonts/font_Exo2-ExtraLight_36pt7b.c"
	"./fonts/font_Exo2-BlackItalic_9pt7b.c"
	"./fonts/font_Exo2-BoldItalic_18pt7b.c"
	"./fonts/font_ocra_12pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_18pt7b.c"
	"./fonts/font_Exo2-ExtraBold_12pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_42pt7b.c"
	"./fonts/font_Exo2-MediumItalic_9pt7b.c"
	"./fonts/font_Exo2-Italic_8pt7b.c"
	"./fonts/font_Exo2-Thin_22pt7b.c"
	"./fonts/font_permanentmarker_9pt7b.c"
	"./fonts/font_Exo2-Bold_8pt7b.c"
	"./fonts/font_Exo2-Bold_16pt7b.c"
	"./fonts/font_Exo2-ExtraBold_36pt7b.c"
	"./fonts/font_Exo2-MediumItalic_24pt7b.c"
	"./fonts/font_ocra_36pt7b.c"
	"./fonts/font_roboto_42pt7b.c"
	"./fonts/font_Exo2-Black_20pt7b.c"
	"./fonts/font_Exo2-ExtraLight_12pt7b.c"
	"./fonts/font_ocra_42pt7b.c"
	"./fonts/font_fairlight_20pt7b.c"
	"./fonts/font_Exo2-ExtraBold_42pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_12pt7b.c"
	"./fonts/font_Exo2-BlackItalic_18pt7b.c"
	"./fonts/font_Exo2-Light_6pt7b.c"
	"./fonts/font_Exo2-Thin_13pt7b.c"
	"./fonts/font_roboto_36pt7b.c"
	"./fonts/font_org_01_18pt7b.c"
	"./fonts/font_Exo2-ExtraLight_42pt7b.c"
	"./fonts/font_roboto_12pt7b.c"
	"./fonts/font_Exo2-Regular_16pt7b.c"
	"./fonts/font_roboto-BlackItalic_16pt7b.c"
	"./fonts/font_Exo2-Medium_20pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_36pt7b.c"
	"./fonts/font_Exo2-LightItalic_8pt7b.c"
	"./fonts/font_roboto-BlackItalic_9pt7b.c"
	"./fonts/font_Exo2-Medium_8pt7b.c"
	"./fonts/font_Exo2-SemiBold_18pt7b.c"
	"./fonts/font_dejavusans_36pt7b.c"
	"./fonts/font_Exo2-Light_12pt7b.c"
	"./fonts/font_ocra_9pt7b.c"
	"./fonts/font_Exo2-BoldItalic_16pt7b.c"
	"./fonts/font_Exo2-Medium_22pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_16pt7b.c"
	"./fonts/font_roboto-Black_36pt7b.c"
	"./fonts/font_Exo2-Bold_18pt7b.c"
	"./fonts/font_Exo2-Bold_6pt7b.c"
	"./fonts/font_Exo2-Italic_6pt7b.c"
	"./fonts/font_Exo2-Light_36pt7b.c"
	"./fonts/font_Exo2-Black_9pt7b.c"
	"./fonts/font_dejavusans_9pt7b.c"
	"./fonts/font_roboto-Black_12pt7b.c"
	"./fonts/font_Exo2-ThinItalic_24pt7b.c"
	"./fonts/font_Exo2-Black_13pt7b.c"
	"./fonts/font_fairlight_22pt7b.c"
	"./fonts/font_dejavusans_12pt7b.c"
	"./fonts/font_roboto-Black_16pt7b.c"
	"./fonts/font_Exo2-ThinItalic_20pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_36pt7b.c"
	"./fonts/font_org_01_8pt7b.c"
	"./fonts/font_Exo2-ExtraBold_9pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_8pt7b.c"
	"./fonts/font_Exo2-BoldItalic_36pt7b.c"
	"./fonts/font_Exo2-SemiBold_42pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_9pt7b.c"
	"./fonts/font_org_01_42pt7b.c"
	"./fonts/font_Exo2-ExtraLight_18pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_6pt7b.c"
	"./fonts/font_dejavusans_16pt7b.c"
	"./fonts/font_Exo2-MediumItalic_13pt7b.c"
	"./fonts/font_Exo2-Thin_8pt7b.c"
	"./fonts/font_roboto-Black_8pt7b.c"
	"./fonts/font_ocra_18pt7b.c"
	"./fonts/font_Exo2-ExtraBold_18pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_12pt7b.c"
	"./fonts/font_Exo2-BlackItalic_42pt7b.c"
	"./fonts/font_Exo2-BoldItalic_12pt7b.c"
	"./fonts/font_Exo2-Light_16pt7b.c"
	"./fonts/font_roboto-BlackItalic_12pt7b.c"
	"./fonts/font_Exo2-Regular_8pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_13pt7b.c"
	"./fonts/font_Exo2-Medium_24pt7b.c"
	"./fonts/font_roboto_16pt7b.c"
	"./fonts/font_Exo2-Regular_12pt7b.c"
	"./fonts/font_Exo2-Bold_42pt7b.c"
	"./fonts/font_permanentmarker_13pt7b.c"
	"./fonts/font_Exo2-ThinItalic_6pt7b.c"
	"./fonts/font_Exo2-ExtraLight_6pt7b.c"
	"./fonts/font_Exo2-BoldItalic_9pt7b.c"
	"./fonts/font_roboto_9pt7b.c"
	"./fonts/font_Exo2-LightItalic_13pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_16pt7b.c"
	"./fonts/font_Exo2-Italic_13pt7b.c"
	"./fonts/font_fairlight_24pt7b.c"
	"./fonts/font_Exo2-Regular_36pt7b.c"
	"./fonts/font_roboto-BlackItalic_36pt7b.c"
	"./fonts/font_Exo2-ThinItalic_22pt7b.c"
	"./fonts/font_Exo2-Black_36pt7b.c"
	"./fonts/font_Exo2-MediumItalic_6pt7b.c"
	"./fonts/font_Exo2-Light_13pt7b.c"
	"./fonts/font_ocra_8pt7b.c"
	"./fonts/font_Exo2-BlackItalic_6pt7b.c"
	"./fonts/font_fairlight_42pt7b.c"
	"./fonts/font_ocra_20pt7b.c"
	"./fonts/font_Exo2-ExtraBold_20pt7b.c"
	"./fonts/font_dejavusans_13pt7b.c"
	"./fonts/font_Exo2-Bold_24pt7b.c"
	"./fonts/font_Exo2-ThinItalic_18pt7b.c"
	"./fonts/font_Exo2-MediumItalic_16pt7b.c"
	"./fonts/font_dejavusans_8pt7b.c"
	"./fonts/font_roboto-Black_13pt7b.c"
	"./fonts/font_Exo2-Black_12pt7b.c"
	"./fonts/font_Exo2-Medium_42pt7b.c"
	"./fonts/font_Exo2-ExtraLight_20pt7b.c"
	"./fonts/font_permanentmarker_6pt7b.c"
	"./fonts/font_Exo2-Black_8pt7b.c"
	"./fonts/font_Exo2-BlackItalic_24pt7b.c"
	"./fonts/font_Exo2-ExtraLight_22pt7b.c"
	"./fonts/font_Exo2-SemiBold_6pt7b.c"
	"./fonts/font_Exo2-Thin_12pt7b.c"
	"./fonts/font_Exo2-Italic_16pt7b.c"
	"./fonts/font_Exo2-LightItalic_16pt7b.c"
	"./fonts/font_Exo2-ExtraBoldItalic_13pt7b.c"
	"./fonts/font_fairlight_6pt7b.c"
	"./fonts/font_Exo2-Thin_36pt7b.c"
	"./fonts/font_roboto-BlackItalic_8pt7b.c"
	"./fonts/font_org_01_24pt7b.c"
	"./fonts/font_Exo2-Medium_9pt7b.c"
	"./fonts/font_Exo2-LightItalic_9pt7b.c"
	"./fonts/font_Exo2-ExtraBold_22pt7b.c"
	"./fonts/font_permanentmarker_16pt7b.c"
	"./fonts/font_ocra_22pt7b.c"
	"./fonts/font_roboto_13pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_16pt7b.c"
	"./fonts/font_Exo2-SemiBold_24pt7b.c"
	"./fonts/font_permanentmarker_12pt7b.c"
	"./fonts/font_Exo2-Italic_36pt7b.c"
	"./fonts/font_Exo2-LightItalic_36pt7b.c"
	"./fonts/font_Exo2-Medium_18pt7b.c"
	"./fonts/font_org_01_20pt7b.c"
	"./fonts/font_Exo2-SemiBold_20pt7b.c"
	"./fonts/font_roboto-BlackItalic_13pt7b.c"
	"./fonts/font_Exo2-ThinItalic_42pt7b.c"
	"./fonts/font_Exo2-Regular_9pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_12pt7b.c"
	"./fonts/font_Exo2-Regular_13pt7b.c"
	"./fonts/font_fairlight_18pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_36pt7b.c"
	"./fonts/font_Exo2-BlackItalic_20pt7b.c"
	"./fonts/font_Exo2-LightItalic_12pt7b.c"
	"./fonts/font_Exo2-Italic_12pt7b.c"
	"./fonts/font_permanentmarker_36pt7b.c"
	"./fonts/font_Exo2-Thin_16pt7b.c"
	"./fonts/font_Exo2-BoldItalic_8pt7b.c"
	"./fonts/font_Exo2-Bold_22pt7b.c"
	"./fonts/font_roboto_8pt7b.c"
	"./fonts/font_Exo2-MediumItalic_12pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_8pt7b.c"
	"./fonts/font_Exo2-Bold_20pt7b.c"
	"./fonts/font_Exo2-ExtraLight_24pt7b.c"
	"./fonts/font_Exo2-ExtraLightItalic_9pt7b.c"
	"./fonts/font_Exo2-BlackItalic_22pt7b.c"
	"./fonts/font_Exo2-Black_16pt7b.c"
	"./fonts/font_org_01_9pt7b.c"
	"./fonts/font_Exo2-ExtraBold_8pt7b.c"
	"./fonts/font_Exo2-SemiBold_22pt7b.c"
	"./fonts/font_Exo2-BoldItalic_13pt7b.c"
	"./fonts/font_Exo2-SemiBoldItalic_13pt7b.c"
	"./fonts/font_Exo2-ExtraBold_24pt7b.c"
	"./fonts/font_Exo2-MediumItalic_36pt7b.c"
	"./fonts/font_ocra_24pt7b.c"
	"./fonts/font_Exo2-Thin_9pt7b.c"
	"./fonts/font_roboto-Black_9pt7b.c"
	"./fonts/font_org_01_22pt7b.c"
)

set(includes
	"include"
	"png"
)

set(requires
	""
	"driver_display_hub75"
	"driver_display_gxgde0213b1"
	"driver_display_erc12864"	
	"driver_display_ssd1306"
	"driver_display_eink"
	"driver_display_ili9341"	
	"driver_display_fri3d"
	"driver_display_flipdotter"
	"driver_display_st7735"
	"driver_display_st7789v"
	"driver_display_nokia6100"
	"driver_display_ledmatrix"
	"driver_io_disobey_samd"
)

set(priv_requires
	"esp_timer"
	"nvs_flash"
	"spi_flash"
	"esp_partition"
	"freetype"
)

idf_component_register(
	SRCS "${srcs}"
	INCLUDE_DIRS ${includes}
	REQUIRES ${requires}
  PRIV_REQUIRES ${priv_requires}
)
