set(srcs
	"mpthreadport.c"
	"py/mpz.c"
	"py/modmath.c"
	"py/formatfloat.c"
	"py/compile.c"
	"py/qstr.c"
	"py/runtime_utils.c"
	"py/emitnthumb.c"
	"py/parsenumbase.c"
	"py/builtinhelp.c"
	"py/unicode.c"
	"py/emitnxtensa.c"
	"py/mpprint.c"
	"py/runtime.c"
	"py/parsenum.c"
	"py/warning.c"
	"py/modstruct.c"
	"py/modgc.c"
	"py/nlrxtensa.c"
	"py/objmap.c"
	"py/objlist.c"
	"py/builtinevex.c"
	"py/modcmath.c"
	"py/smallint.c"
	"py/opmethods.c"
	"py/nlrx86.c"
	"py/emitnative.c"
	"py/asmx64.c"
	"py/objslice.c"
	"py/objstringio.c"
	"py/objgetitemiter.c"
	"py/sequence.c"
	"py/objdict.c"
	"py/nlrsetjmp.c"
	"py/objfloat.c"
	"py/objstrunicode.c"
	"py/vm.c"
	"py/persistentcode.c"
	"py/objattrtuple.c"
	"py/emitglue.c"
	"py/emitnx86.c"
	"py/objcomplex.c"
	"py/repl.c"
	"py/lexer.c"
	"py/modcollections.c"
	"py/asmbase.c"
	"py/pairheap.c"
	"py/emitnxtensawin.c"
	"py/objint.c"
	"py/emitnarm.c"
	"py/vstr.c"
	"py/objclosure.c"
	"py/objenumerate.c"
	"py/nlraarch64.c"
	"py/argcheck.c"
	"py/objexcept.c"
	"py/binary.c"
	"py/objsingleton.c"
	"py/objrange.c"
	"py/stackctrl.c"
	"py/scope.c"
	"py/mpstate.c"
	"py/objreversed.c"
	"py/nlrthumb.c"
	"py/nlr.c"
	"py/frozenmod.c"
	"py/objnone.c"
	"py/emitnx64.c"
	"py/reader.c"
	"py/modmicropython.c"
	"py/emitcommon.c"
	"py/nlrpowerpc.c"
	"py/modarray.c"
	"py/builtinimport.c"
	"py/objint_mpz.c"
	"py/objtype.c"
	"py/emitinlinextensa.c"
	"py/map.c"
	"py/objobject.c"
	"py/objzip.c"
	"py/objproperty.c"
	"py/objnamedtuple.c"
	"py/nativeglue.c"
	"py/profile.c"
	"py/malloc.c"
	"py/objgenerator.c"
	"py/ringbuf.c"
	"py/objdeque.c"
	"py/asmxtensa.c"
	"py/objmodule.c"
	"py/objarray.c"
	"py/objfun.c"
	"py/showbc.c"
	"py/asmthumb.c"
	"py/parse.c"
	"py/objboundmeth.c"
	"py/objstr.c"
	"py/objtuple.c"
	"py/scheduler.c"
	"py/bc.c"
	"py/emitbc.c"
	"py/asmarm.c"
	"py/pystack.c"
	"py/modsys.c"
	"py/emitinlinethumb.c"
	"py/modio.c"
	"py/objbool.c"
	"py/objcell.c"
	"py/nlrx64.c"
	"py/objset.c"
	"py/nlrmips.c"
	"py/asmx86.c"
	"py/objfilter.c"
	"py/moderrno.c"
	"py/obj.c"
	"py/objpolyiter.c"
	"py/stream.c"
	"py/modthread.c"
	"py/gc.c"
	"py/modbuiltins.c"
	"py/objint_longlong.c"
	"shared/runtime/gchelper_generic.c"
	"port/mphalport.c"
	"port/embed_util.c"
)

set(includes
	"./"
	# "genhdr"
	# "py"
	# "extmod"
	# "shared"
	# "port"
)

set(requires
	"driver"
	"esp_wifi"
	# "nvs_flash"
	# "spi_flash"
	# "esp_partition"
)

set(priv_requires
	# "buses"
	# "driver_display_st7789v"
	# "driver_framebuffer"
	# "driver_rtcmem"	
	# "resource_ssl_certs"
	# "app_update"
	# "esp_wifi"
	# "mbedtls"
	# # "esp_hw_support"
	# "esp_event"
)



idf_component_register(
	SRCS "${srcs}"
	INCLUDE_DIRS ${includes}
	REQUIRES ${requires}
    PRIV_REQUIRES ${priv_requires}
)

# target_compile_definitions(micropython PRIVATE MICROPY_GCREGS_SETJMP)
add_compile_definitions(MICROPY_GCREGS_SETJMP)